added css in advanced search

--- a/google/googleadvance.html
+++ b/google/googleadvance.html
@@ -7,6 +7,9 @@
     <title>Advanced Google search</title>
 </head>
 <body>
-    
+    <div class="nav">
+        <a class="nav1" href="google.html">Search</a>
+        <a href="googleiamges.html">Google Images</a>
+    </div>
 </body>
 </html>
